# gicg_sim

./: .mypy.ini  .pre-commit-config.yaml  pyproject.toml  requirements.txt
docs/: architect.md
gicg_sim/: __init__.py
gicg_sim/constants/: __init__.py  damage.py  element.py  global_.py  id.py  skill.py  target.py
gicg_sim/game/: _base.py  _side.py  _token.py  card.py  character.py  cost.py  dice.py  game.py  skill.py  summon.py  supporter.py
gicg_sim/game/character/: Khaenriahn.py  __init__.py  _base.py
gicg_sim/game/event/: __init__.py  cost.py  damage.py  skill.py
gicg_sim/game/skill/: __init__.py
gicg_sim/game/state/: __init__.py
tests/test_game/: test_game_init.py
