[tool.poetry]
name = "gicg-sim"
version = "0.1.0"
description = ""
authors = ["RedContritio <RedContritio@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lupa = "^2.2"
pyyaml = "^6.0.2"
types-lupa = "^2.2.0.20240917"
types-pyyaml = "^6.0.12.20240917"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
